--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
 # command to install dependencies
 install: "pip install ."
 # command to run tests
-script: pytest
+script: python -m pytest
