Add Docker support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,20 +4,23 @@
    db:
      build: ./docker/database
      restart: always
-     command: mysqld
+     command: mysqld --verbose
      volumes:
        - /var/lib/mysql
-     expose:
-       - "3306"
+     ports:
+       - "3306:3306"
      environment:
        MYSQL_BASE: "msr14"
        MYSQL_USER: "msr14"
        MYSQL_PASSWORD: "password"
-       MYSQL_ROOT_PASSWORD: "password"
+       MYSQL_ROOT_PASSWORD: "root"
        MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
 
    ghdata:
      build: .
+     restart: always
+     volumes:
+       - .:/ghdata
      ports:
        - "5000:5000"
      links:
@@ -26,8 +29,9 @@
        - db
      environment:
        GHDATA_DB_USER: "root"
-       GHDATA_DB_PASS: "password"
-       GHDATA_DB_HOST: "habksdf"
+       GHDATA_DB_PASS: "root"
+       GHDATA_DB_PORT: "3306"
+       GHDATA_DB_HOST: "db"
        GHDATA_DB_NAME: "msr14"
        GHDATA_GITHUB_API_KEY:
        GHDATA_PUBLIC_WWW_API_KEY:
