--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@
      command: mysqld --verbose
      volumes:
        - /var/lib/mysql
-     ports:
-       - "3306:3306"
+     expose:
+       - "3306"
      environment:
        MYSQL_BASE: "msr14"
        MYSQL_USER: "msr14"
