--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-Flask==0.12.1
+Flask==0.12.2
 Flask_Cors==3.0.2
-pandas==0.19.2
-pytest==3.0.7
-requests==2.13.0
-setuptools==34.4.0
-SQLAlchemy==1.1.9
+numpy==1.12.1
+pandas==0.20.1
+pytest==3.1.0
+requests==2.14.2
+setuptools==35.0.2
+SQLAlchemy==1.1.10
 python_dateutil==2.6.0
-Django==1.11
+Django==1.11.1
 gevent==1.2.1
 GitPython==2.1.3
 PyGithub==1.34
