Update to Python 3 Conda env

--- a/environment.yml
+++ b/environment.yml
@@ -5,40 +5,37 @@ channels: !!python/tuple
 - !!python/unicode
   'defaults'
 dependencies:
-- conda-forge::blas=1.1=openblas
 - conda-forge::ca-certificates=2017.4.17=0
-- conda-forge::certifi=2017.4.17=py27_0
-- conda-forge::click=6.7=py27_0
-- conda-forge::flask=0.12=py27_0
-- conda-forge::flask-cors=3.0.2=py27_0
-- conda-forge::itsdangerous=0.24=py27_1
-- conda-forge::jinja2=2.9.5=py27_0
-- conda-forge::markupsafe=1.0=py27_0
-- conda-forge::mysql-connector-python=2.2.2=py27_0
+- conda-forge::certifi=2017.4.17=py36_0
+- conda-forge::click=6.7=py36_0
+- conda-forge::flask=0.12=py36_0
+- conda-forge::flask-cors=3.0.2=py36_0
+- conda-forge::itsdangerous=0.24=py36_1
+- conda-forge::jinja2=2.9.5=py36_0
+- conda-forge::markupsafe=1.0=py36_0
 - conda-forge::ncurses=5.9=10
-- conda-forge::numpy=1.12.1=py27_blas_openblas_200
-- conda-forge::openblas=0.2.19=2
 - conda-forge::openssl=1.0.2k=0
-- conda-forge::pandas=0.20.1=np112py27_0
-- conda-forge::pip=9.0.1=py27_0
-- conda-forge::py=1.4.33=py27_0
-- conda-forge::pygithub=1.34=py27_0
-- conda-forge::pyjwt=1.4.2=py27_0
-- conda-forge::pytest=3.1.0=py27_0
-- conda-forge::python=2.7.13=1
-- conda-forge::python-dateutil=2.6.0=py27_0
-- conda-forge::pytz=2017.2=py27_0
+- conda-forge::pandas=0.20.1=np112py36_0
+- conda-forge::pip=9.0.1=py36_0
+- conda-forge::py=1.4.33=py36_0
+- conda-forge::pygithub=1.34=py36_0
+- conda-forge::pyjwt=1.4.2=py36_0
+- conda-forge::pytest=3.1.0=py36_0
+- conda-forge::python=3.6.1=3
+- conda-forge::python-dateutil=2.6.0=py36_0
+- conda-forge::pytz=2017.2=py36_0
 - conda-forge::readline=6.2=0
-- conda-forge::requests=2.13.0=py27_0
-- conda-forge::setuptools=33.1.1=py27_0
-- conda-forge::six=1.10.0=py27_1
-- conda-forge::sqlalchemy=1.1.5=py27_0
+- conda-forge::requests=2.13.0=py36_0
+- conda-forge::setuptools=33.1.1=py36_0
+- conda-forge::six=1.10.0=py36_1
+- conda-forge::sqlalchemy=1.1.5=py36_0
 - conda-forge::sqlite=3.13.0=1
 - conda-forge::tk=8.5.19=1
-- conda-forge::werkzeug=0.11.10=py27_0
-- conda-forge::wheel=0.29.0=py27_0
+- conda-forge::werkzeug=0.11.10=py36_0
+- conda-forge::wheel=0.29.0=py36_0
+- conda-forge::xz=5.2.2=0
 - conda-forge::zlib=1.2.11=0
-- pip:
-  - powerline-status==2.5
+- mkl=2017.0.1=0
+- numpy=1.12.1=py36_0
 prefix: /Users/howderek/anaconda/envs/ghdata
 
