--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,27 +1,38 @@
 {
-  "name": "brunch-app",
-  "description": "Brunch.io application",
-  "private": true,
-  "author": "Brunch",
+  "name": "ghdata-frontend",
   "version": "0.0.1",
-  "repository": "",
-  "scripts": {
-    "start": "brunch watch --server",
-    "build": "brunch build --production"
+  "description": "Vue Frontend to the GHData open source metrics platfrom",
+  "main": "index.js",
+  "author": "Derek Howard et al.",
+  "license": "MIT",
+  "devDependencies": {
+    "auto-reload-brunch": "^2.7.1",
+    "babel-brunch": "^6.1.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-latest": "^6.24.1",
+    "brunch": "^2.10.12",
+    "clean-css-brunch": "^2.10.0",
+    "stylus-brunch": "^2.10.0",
+    "uglify-js-brunch": "^2.10.0",
+    "vue-brunch": "^2.0.1"
   },
   "dependencies": {
-    "d3": "^4.9.1",
+    "babel": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0",
+    "css-loader": "^0.28.7",
+    "d3": "^4.11.0",
     "jquery": "^3.2.1",
     "metrics-graphics": "^2.11.0",
-    "query-string": "^4.3.4",
-    "stylus-brunch": "^2.10.0"
-  },
-  "devDependencies": {
-    "auto-reload-brunch": "^2",
-    "babel-brunch": "~6.0",
-    "babel-preset-latest": "^6",
-    "brunch": "^2",
-    "clean-css-brunch": "^2",
-    "uglify-js-brunch": "^2"
+    "query-string2": "^0.1.0",
+    "vue": "^2.5.3",
+    "vue-loader": "^13.4.0",
+    "vue-template-compiler": "^2.5.3",
+    "vueify": "^9.4.1",
+    "vuex": "^3.0.1"
   }
 }
