--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
   "devDependencies": {
     "auto-reload-brunch": "^2.7.1",
     "babel-brunch": "^6.1.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.2",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
@@ -25,14 +25,15 @@
     "babel": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.9",
     "d3": "^4.12.2",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "metrics-graphics": "^2.12.0",
-    "query-string2": "^0.1.0",
-    "vue": "^2.5.3",
-    "vue-loader": "^13.4.0",
-    "vue-template-compiler": "^2.5.3",
+    "query-string2": "^0.1.2",
+    "svgsaver": "^0.9.0",
+    "vue": "^2.5.13",
+    "vue-loader": "^13.7.0",
+    "vue-template-compiler": "^2.5.13",
     "vueify": "^9.4.1",
     "vuex": "^3.0.1"
   }
