--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,12 +28,18 @@
     "css-loader": "^0.28.9",
     "d3": "^4.12.2",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
     "metrics-graphics": "^2.12.0",
+    "npm": "^5.7.1",
     "query-string2": "^0.1.2",
     "svgsaver": "^0.9.0",
+    "vega": "^3.1.0",
+    "vega-embed": "^3.0.0",
+    "vega-lite": "^2.1.3",
     "vue": "^2.5.13",
     "vue-loader": "^13.7.0",
     "vue-template-compiler": "^2.5.13",
+    "vue-vega": "^1.0.0-alpha.13",
     "vueify": "^9.4.1",
     "vuex": "^3.0.1"
   }
