Refactor LineChart, update Python docs (WIP), update hoek

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,18 @@
      ports:
        - "80:80"
      environment:
+       AUGUR_HOST:
+       AUGUR_PORT:
+       AUGUR_PUBLIC_WWW_API_KEY:
+       AUGUR_GITHUB_API_KEY:
+       AUGUR_LIBRARIESIO_API_KEY:
        AUGUR_DB_USER:
        AUGUR_DB_PASS:
-       AUGUR_DB_PORT:
        AUGUR_DB_HOST:
+       AUGUR_DB_PORT:
        AUGUR_DB_NAME:
-       AUGUR_GITHUB_API_KEY:
-       AUGUR_PUBLIC_WWW_API_KEY:
+       AUGUR_GHTORRENT_PLUS_USER:
+       AUGUR_GHTORRENT_PLUS_PASS:
+       AUGUR_GHTORRENT_PLUS_HOST:
+       AUGUR_GHTORRENT_PLUS_PORT:
+       AUGUR_GHTORRENT_PLUS_NAME:
