--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,10 +27,11 @@
     "babel-runtime": "^6.26.0",
     "css-loader": "^0.28.9",
     "d3": "^4.12.2",
+    "hoek": "^5.0.3",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "metrics-graphics": "^2.12.0",
-    "npm": "^5.7.1",
+    "npm": "^5.8.0",
     "query-string2": "^0.1.2",
     "svgsaver": "^0.9.0",
     "vega": "^3.1.0",
