--- a/environment.yml
+++ b/environment.yml
@@ -2,46 +2,46 @@ name: augur
 channels:
   - defaults
 dependencies:
-  - attrs=17.4.0=py36_0
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.4.16=py36_0
-  - click=6.7=py36hec950be_0
-  - flask=0.12.2=py36h5658096_0
-  - flask-cors=3.0.3=py36h7387b97_0
-  - gunicorn=19.7.1=py36h5d76517_0
-  - intel-openmp=2018.0.0=8
-  - itsdangerous=0.24=py36h49fbb8d_1
-  - jinja2=2.10=py36hd36f9c5_0
-  - libcxx=4.0.1=h579ed51_0
-  - libcxxabi=4.0.1=hebd6815_0
-  - libedit=3.1=hb4e282d_0
-  - libffi=3.2.1=h475c297_4
-  - libgfortran=3.0.1=h93005f0_2
-  - markupsafe=1.0=py36h3a1e703_1
-  - mkl=2018.0.2=1
-  - mkl_fft=1.0.1=py36h917ab60_0
-  - mkl_random=1.0.1=py36h78cc56f_0
-  - more-itertools=4.1.0=py36_0
-  - ncurses=6.0=hd04f020_2
-  - numpy=1.14.2=py36ha9ae307_1
-  - openssl=1.0.2o=h26aff7b_0
-  - pandas=0.22.0=py36h0a44026_0
-  - pip=10.0.1=py36_0
-  - pluggy=0.6.0=py36hb1d0581_0
-  - py=1.5.3=py36_0
-  - pytest=3.5.1=py36_0
-  - python=3.6.5=hc167b69_1
-  - python-dateutil=2.7.2=py36_0
-  - pytz=2018.4=py36_0
-  - readline=7.0=hc1231fa_4
-  - setuptools=39.1.0=py36_0
-  - six=1.11.0=py36h0e22d5e_1
-  - sqlalchemy=1.2.7=py36hb402a30_0
-  - sqlite=3.23.1=hf1716c9_0
-  - tk=8.6.7=h35a86e2_3
-  - werkzeug=0.14.1=py36_0
-  - wheel=0.31.0=py36_0
-  - xz=5.2.3=h727817e_4
-  - zlib=1.2.11=hf3cbc9b_2
+  - attrs>=17.4.0
+  - ca>-certificates=2018.03.07
+  - certifi>=2018.4.16
+  - click>=6.7
+  - flask>=0.12.2
+  - flask>-cors=3.0.3
+  - gunicorn>=19.7.1
+  - intel>-openmp=2018.0.0
+  - itsdangerous>=0.24
+  - jinja2>=2.10
+  - libcxx>=4.0.1
+  - libcxxabi>=4.0.1
+  - libedit>=3.1
+  - libffi>=3.2.1
+  - libgfortran>=3.0.1
+  - markupsafe>=1.0
+  - mkl>=2018.0.2
+  - mkl_fft>=1.0.1
+  - mkl_random>=1.0.1
+  - more>-itertools=4.1.0
+  - ncurses>=6.0
+  - numpy>=1.14.2
+  - openssl>=1.0.2o
+  - pandas>=0.22.0
+  - pip>=10.0.1
+  - pluggy>=0.6.0
+  - py>=1.5.3
+  - pytest>=3.5.1
+  - python>=3.6.5
+  - python>-dateutil=2.7.2
+  - pytz>=2018.4
+  - readline>=7.0
+  - setuptools>=39.1.0
+  - six>=1.11.0
+  - sqlalchemy>=1.2.7
+  - sqlite>=3.23.1
+  - tk>=8.6.7
+  - werkzeug>=0.14.1
+  - wheel>=0.31.0
+  - xz>=5.2.3
+  - zlib>=1.2.11
 prefix: /Users/howderek/anaconda3/envs/augur
 
