--- a/docs/api/api_project.json
+++ b/docs/api/api_project.json
@@ -1,14 +1,1 @@
-{
-  "name": "",
-  "version": "0.0.0",
-  "description": "",
-  "sampleUrl": false,
-  "defaultVersion": "0.0.0",
-  "apidoc": "0.3.0",
-  "generator": {
-    "name": "apidoc",
-    "time": "2018-05-11T19:12:21.742Z",
-    "url": "http://apidocjs.com",
-    "version": "0.17.6"
-  }
-}
+{  "name": "",  "version": "0.0.0",  "description": "",  "sampleUrl": false,  "defaultVersion": "0.0.0",  "apidoc": "0.3.0",  "generator": {    "name": "apidoc",    "time": "2018-05-18T14:43:11.357Z",    "url": "http://apidocjs.com",    "version": "0.17.6"  }}
