--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: python
 python:
-  - "2.7"
   - "3.6"
 # command to install dependencies
 install: "pip install ."
 # command to run tests
-script: "python -m pytest"
+script: "python -m pytest ./test"
