--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "metrics-graphics": "^2.12.0",
+    "moment": "^2.22.1",
     "npm": "^6.0.1",
     "query-string2": "^0.1.2",
     "svgsaver": "^0.9.0",
@@ -39,6 +40,7 @@
     "vega-lite": "^2.1.3",
     "vue": "^2.5.16",
     "vue-loader": "^15.0.10",
+    "vue-table-component": "^1.9.1",
     "vue-template-compiler": "^2.5.16",
     "vue-vega": "^1.0.0-alpha.13",
     "vueify": "^9.4.1",
