--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 # command to install dependencies
 install: "pip install ."
 # command to run tests
-script: "make test"
+script: "python -m pytest ./test"
