added Travis CI integration to Slack

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ python:
 install: "pip install ."
 # command to run tests
 script: "python -m pytest ./test"
+
+ notifications:
+    slack: augurlabs:T5g5uaEPLwSiTUTRH1kiXGcS
