--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,18 @@ script: "python -m pytest ./test"
 
  notifications:
     slack: augurlabs:T5g5uaEPLwSiTUTRH1kiXGcS
+
+language: node_js
+node_js:
+  - "8.2.1"
+
+install:
+  - npm install newman
+
+before_script:
+  - node --version
+  - npm --version
+  - node_modules/.bin/newman --version
+
+script:
+  - node_modules/.bin/newman run tests/bitcoinz.postman_collection.json -e tests/tests.postman_environment.json
