--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ matrix:
     - 
       install: "pip install ."
       language: python
+      python: "3.7"
       notifications: 
         slack: "augurlabs:T5g5uaEPLwSiTUTRH1kiXGcS"
       script: "python -m pytest ./test"
