--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,96 @@
-Flask==0.12.2
-Flask_Cors==3.0.2
-numpy==1.12.1
-pandas==0.20.1
-pytest==3.1.0
-requests==2.14.2
-setuptools==35.0.2
-SQLAlchemy==1.1.10
-python_dateutil==2.6.0
-Django==1.11.1
-gevent==1.2.1
-GitPython==2.1.3
-PyGithub==1.34
-mysql_connector_repackaged==0.3.1
-re==2.2.1
-coloredlogs==10.0.0
+alabaster==0.7.10
+appnope==0.1.0
+asn1crypto==0.24.0
+atomicwrites==1.2.1
+attrs==18.2.0
+Babel==2.5.3
+backcall==0.1.0
+Beaker==1.10.0
+beautifulsoup4==4.6.3
+certifi==2018.8.24
+cffi==1.11.5
+chardet==3.0.4
+Click==7.0
+coloredlogs==10.0
+cryptography==2.3.1
+cycler==0.10.0
+Cython==0.28.5
+DateTime==4.2
+decorator==4.3.0
+Deprecated==1.2.3
+docopt==0.6.2
+docutils==0.14
+dulwich==0.19.2
+Flask==1.0.2
+Flask-Cors==3.0.6
+Flask-Login==0.4.1
+Flask-WTF==0.14.2
+gitdb2==2.0.4
+GitPython==2.1.11
+gunicorn==19.9.0
+humanfriendly==4.16.1
+idna==2.7
+imagesize==1.0.0
+ipdb==0.11
+ipykernel==4.8.2
+ipython==7.0.1
+ipython-genutils==0.2.0
+itsdangerous==0.24
+jedi==0.13.1
+Jinja2==2.10
+jupyter-client==5.2.3
+jupyter-core==4.4.0
+kiwisolver==1.0.1
+lockfile==0.12.2
+MarkupSafe==1.0
+matplotlib==2.2.2
+mkl-fft==1.0.0
+mkl-random==1.0.1
+more-itertools==4.3.0
+numpy==1.15.2
+packaging==17.1
+pandas==0.23.4
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.5
+pipreqs==0.4.9
+pluggy==0.7.1
+prompt-toolkit==2.0.6
+protobuf==3.6.1
+ptyprocess==0.6.0
+py==1.7.0
+pycparser==2.19
+pyevent==0.0.1
+PyGithub==1.43.2
+Pygments==2.2.0
+PyJWT==1.6.4
+PyMySQL==0.9.2
+pyOpenSSL==17.5.0
+pyparsing==2.2.0
+pyperclip==1.7.0
+PySocks==1.6.8
+pytest==3.8.2
+python-daemon==2.1.2
+python-dateutil==2.7.3
+pytz==2018.5
+pyzmq==17.0.0
+requests==2.19.1
+requests-file==1.4.3
+setuptools-git==1.2
+simplegeneric==0.8.1
+six==1.11.0
+smmap2==2.0.4
+snowballstemmer==1.2.1
+Sphinx==1.7.4
+sphinxcontrib-websupport==1.0.1
+SQLAlchemy==1.2.12
+tldextract==2.2.0
+tornado==5.0.2
+traitlets==4.3.2
+urllib3==1.23
+wcwidth==0.1.7
+Werkzeug==0.14.1
+wrapt==1.10.11
+WTForms==2.2.1
+yarg==0.1.9
+zope.interface==4.5.0
