update links to this repository to all point to chaoss/augur

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
  services:
    augur:
      build: .
-     image: osshealth/augur
+     image: chaoss/augur
      restart: always
      volumes:
        - .:/augur
