add base64 encoded url to downloaded_repos endpoint

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
       install: 
         - "pip install --process-dependency-links ."
         - "npm install newman"
+    - name: "API Tests"
       language: python
       python: "3.6"
       notifications: 
