fix travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,15 @@ matrix:
         slack: "augurlabs:T5g5uaEPLwSiTUTRH1kiXGcS"
       script: "python -m pytest augur/datasources/**/test_**.py"
 
-    - before_script: 
+    - name: "API Tests"
+      before_script: 
         - "node --version"
         - "npm --version"
         - "node_modules/.bin/newman --version"
-      install: 
-        - "pip install --process-dependency-links ."
-        - "npm install newman"
-    - name: "API Tests"
+      install: "pip install . && npm install newman"
       language: python
       python: "3.6"
-      notifications: 
+      notifications:
         slack: "augurlabs:T5g5uaEPLwSiTUTRH1kiXGcS"
       script: 
         - "python3 -m augur.server &"
