--- a/frontend/public/api_docs/api_project.json
+++ b/frontend/public/api_docs/api_project.json
@@ -1,1 +1,14 @@
-{  "name": "",  "version": "0.0.0",  "description": "",  "sampleUrl": false,  "defaultVersion": "0.0.0",  "apidoc": "0.3.0",  "generator": {    "name": "apidoc",    "time": "2018-12-21T22:11:28.139Z",    "url": "http://apidocjs.com",    "version": "0.17.7"  }}
+{
+  "name": "",
+  "version": "0.0.0",
+  "description": "",
+  "sampleUrl": false,
+  "defaultVersion": "0.0.0",
+  "apidoc": "0.3.0",
+  "generator": {
+    "name": "apidoc",
+    "time": "2018-12-21T21:11:01.475Z",
+    "url": "http://apidocjs.com",
+    "version": "0.17.6"
+  }
+}
