--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "vega-lite": "^2.6.0",
     "vue": "^2.5.16",
     "vue-loader": "^15.2.4",
+    "vue-multiselect": "^2.1.3",
     "vue-router": "^3.0.1",
     "vue-table-component": "^1.9.1",
     "vue-template-compiler": "^2.5.16",
