Including database schema DDL, license update. Update to .gitignore to store schema-creation-sql.

--- a/.gitignore
+++ b/.gitignore
@@ -28,11 +28,11 @@
 ######################
 *.log
 *.pid
-*.sql
 *.sqlite
 *.cfg
 *.cfg.old
 *.cfg.sh
+*.err
 
 # OS generated files #
 ######################
