Prevent route test from being discovered by the unit tests process
Due to a previously established file naming convention, the data source
functions unit test process was discovering the API routes tests as well.
Since the unit test process does not spawn an instance of the server, this
meant the routes test were failing, causing the build to break.

This patch fixes this issue by renaming all files with data source functions
unit tests to be in the form of `test_<plugin_name>_functions.py`.

Signed-off-by: Carter Landis <ccarterlandis@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,16 @@ matrix:
     install: pip install .
     language: python
     python: '3.6'
-    script: python -m pytest augur/datasources/**/test_**.py
+    script: python -m pytest augur/datasources/**/test_**_functions.py
 
   - name: API Unit Tests
     install: pip install .
     language: python
     python: '3.6'
-    notifications:
-      slack: augurlabs:T5g5uaEPLwSiTUTRH1kiXGcS
     script:
       - augur run > /dev/null 2>&1 &
       - sleep 10
-      - pytest augur/datasources/**/test_**_routes.py
+      - python -m pytest augur/datasources/**/test_**_routes.py
 
 notifications:
   slack:
