Added node-sass to frontend/package.json. May have to do a  as two commands for npm to install. I think making sure you have the latest update of npm may also be necessary. Yarn install also works.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "node-sass": "^4.12.0",
     "query-string2": "^0.1.2",
     "svgsaver": "^0.9.0",
     "vega": "^4.4.0",
