--- a/frontend/public/api_docs/api_project.json
+++ b/frontend/public/api_docs/api_project.json
@@ -1,1 +1,14 @@
-{  "name": "",  "version": "0.0.0",  "description": "",  "sampleUrl": false,  "defaultVersion": "0.0.0",  "apidoc": "0.3.0",  "generator": {    "name": "apidoc",    "time": "2019-06-24T22:16:25.282Z",    "url": "http://apidocjs.com",    "version": "0.17.7"  }}
+{
+  "name": "",
+  "version": "0.0.0",
+  "description": "",
+  "sampleUrl": false,
+  "defaultVersion": "0.0.0",
+  "apidoc": "0.3.0",
+  "generator": {
+    "name": "apidoc",
+    "time": "2019-06-28T18:32:25.687Z",
+    "url": "http://apidocjs.com",
+    "version": "0.17.7"
+  }
+}
