--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^0.28.9",
     "d3": "^5.5.0",
     "hoek": "^5.0.3",
+    "iltorb": "^2.4.3",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
