Refactor Travis build to use test_api script
Signed-off-by: Carter Landis <ccarterlandis@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,7 @@ matrix:
     language: python
     python: '3.6'
     script:
-      - augur run > /dev/null 2>&1 &
-      - sleep 10
-      - python -m pytest augur/datasources/**/test_**_routes.py
+    - python test/api/test_api.py
 
 notifications:
   slack:
