Add creation of necessary log files to Travis build
Augur needs a backend.log and backend.pid file to run the server.
While there are automatically created locally, they are not on Travis. Steps to
create these files were added to the Travis build config.

Signed-off-by: Carter Landis <ccarterlandis@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ matrix:
     language: python
     python: '3.6'
     script:
+    - mkdir logs
+    - touch logs/backend.pid
+    - touch logs/backend.log
     - python test/api/test_api.py
 
 notifications:
