--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,8 @@ matrix:
     language: python
     python: '3.6'
     script:
-    - mkdir logs
-    - touch logs/backend.pid
-    - touch logs/backend.log
-    - python test/api/test_api.py
+    - augur run
+    - pytest -rA --tb=short augur/datasources/metrics_status/test_metrics_status_routes.py
 
 notifications:
   slack:
