--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.11",
     "query-string": "^6.8.1",
     "quill": "^1.3.6",
+    "shards-vue": "^1.0.4",
     "svgsaver": "^0.9.0",
     "vega": "^5.4.0",
     "vega-embed": "^4.2.1",
@@ -31,7 +32,7 @@
     "vue-spinners": "^1.0.2",
     "vue-vega": "^1.0.0-alpha.13",
     "vuex": "^3.0.1",
-    "shards-vue": "^1.0.4"
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
