--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "@types/d3": "^5.7.2",
     "@types/jquery": "^3.3.30",
     "@types/lodash": "^4.14.135",
+    "@types/nprogress": "^0.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "d3": "^5.9.7",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
+    "nprogress": "^0.2.0",
     "query-string": "^6.8.1",
     "quill": "^1.3.6",
     "shards-vue": "^1.0.4",
