--- a/requirements.txt
+++ b/requirements.txt
@@ -76,6 +76,7 @@ pytz==2018.5
 pyzmq==17.0.0
 requests>=2.21.0
 requests-file==1.4.3
+scipy==1.3.1
 setuptools-git==1.2
 simplegeneric==0.8.1
 six==1.11.0
