Remove redundant Facade endpoint mapping
Due to likely either a copy/paste or merge error, the facade_project
endpoint was being declared twice, causing the build to fail since all
Flask endpionts must be unique.

Signed-off-by: Carter Landis <ccarterlandis@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ matrix:
     python: '3.6'
     script:
     - pip install zmq
-    - augur run
+    - augur run > /dev/null 2>&1 &
+    - sleep 10
+    - python -m pytest augur/datasources/**/test_**_routes.py
 
 notifications:
   slack:
