ignore package-lock.json in frontend/ ... trust me. I'm a professionl 🤣

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -23,3 +23,7 @@ Thumbs.db
 node_modules/
 
 docs/python/build/doctrees/AugurContext.doctree
+
+# Removing package-lock.json
+# frontend/package0-lock.json
+#
