--- a/.gitignore
+++ b/.gitignore
@@ -17,47 +17,56 @@ e Compiled source #
 ############
 # it's better to unpack these files and commit the raw source
 # git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
+*.7z/
+*.dmg/
+*.gz/
+*.iso/
+*.jar/
+*.rar/
+*.tar/
+*.zip/
 .vagrant
 
 # Logs and databases #
+# The .1-.7/ are for worker files saved in debugging
 ######################
-*.log
-*.pid
-*.sqlite
-*.cfg
+*.log/
+*.pid/
+*.sqlite/
+*.cfg/
 *.cfg.old
-*.cfg.sh
-*.err
+*.cfg.sh/
+*.err/
+*.1/
+*.2/
+*.3/
+*.4/
+*.5/
+*.6/
+*.7/
+*.out/
 
 # OS generated files #
 ######################
-.DS_Store
+.DS_Store/
 .DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
-ehthumbs.db
-Thumbs.db
-*.cache
-*.pyc
+ehthumbs.db/
+Thumbs.db/
+*.cache/
+*.pyc/
 *.swp
-*.un~
+*.un~/
 
 # Git #
 #######
-*.orig
+*.orig/
 
 # Git #
 #######
-*.orig
+*.orig/
 *.un~
 .merge_file_*
 
@@ -75,7 +84,7 @@ augur_venv/
 # Node #
 ########
 *node_modules/
-yarn.lock
+yarn.lock/
 
 # Augur #
 #########
@@ -90,6 +99,7 @@ frontend/public/*.map
 docs/python/build/doctrees/AugurContext.doctree
 docs/python/build/doctrees/augurcontext.doctree
 logs/
+
 
 # build directories #
 #####################
