--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ e Compiled source #
 *build/
 *dist/
 
+*.egg
+*.egg-info
+
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
@@ -96,4 +99,40 @@ logs/
 build/
 lib/
 dist/
+*.py[cod]
+
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.egg-info
+dist
+eggs
+parts
+bin/
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
 
