Refactor all metrics into corresponding models
This commit finalizes the new metrics architecture. All previously
available metrics are now accessible through the .metrics object of
the Application class.

Signed-off-by: Carter Landis <ccarterlandis@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,16 @@ matrix:
     language: python
     python: '3.6'
     script:
-    - pip install zmq
-    - python -m pytest augur/datasources/**/test_**_functions.py
+    - python -m pytest augur/metrics/**/test_**_functions.py
 
   - name: API Unit Tests
     install: python setup.py install; pip install .
     language: python
     python: '3.6'
     script:
-    - pip install zmq
     - augur run > /dev/null 2>&1 &
     - sleep 10
-    - python -m pytest -ra augur/datasources/**/test_**_routes.py
+    - python -m pytest -ra augur/metrics/**/test_**_routes.py
 
 notifications:
   slack:
