--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ matplotlib==2.2.2
 mkl-fft==1.0.0
 mkl-random==1.0.1
 more-itertools==4.3.0
+multiexit=1.4.1
 numpy==1.15.2
 packaging==17.1
 pandas==0.23.4
