--- a/requirements.txt
+++ b/requirements.txt
@@ -84,6 +84,7 @@ six==1.11.0
 smmap2==2.0.4
 snowballstemmer==1.2.1
 Sphinx==1.7.4
+sphinx_rtd_theme==0.4.2
 sphinxcontrib-websupport==1.0.1
 SQLAlchemy>=1.3.0
 tldextract==2.2.0
