--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,84 @@
-alabaster==0.7.10
+alabaster==0.7.12
+alembic==1.2.1
 appnope==0.1.0
-asn1crypto==0.24.0
-atomicwrites==1.2.1
-attrs==18.2.0
-Babel==2.5.3
+atomicwrites==1.3.0
+attrs==19.3.0
+Babel==2.7.0
 backcall==0.1.0
-Beaker==1.10.0
-beautifulsoup4==4.6.3
-certifi==2018.8.24
-cffi==1.11.5
+Beaker==1.11.0
+beautifulsoup4==4.8.1
+certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
+colored==1.4.0
 coloredlogs==10.0
-cryptography==2.3.1
-cycler==0.10.0
-Cython==0.28.5
-DateTime==4.2
-decorator==4.3.0
-Deprecated==1.2.3
-docopt==0.6.2
-docutils==0.14
-dulwich==0.19.2
-Flask==1.0.2
-Flask-Cors==3.0.6
+Cython==0.29.13
+decorator==4.4.1
+Deprecated==1.2.6
+docutils==0.15.2
+Flask==1.1.1
+Flask-Cors==3.0.8
 Flask-Login==0.4.1
 Flask-WTF==0.14.2
-gitdb2==2.0.4
-GitPython==2.1.11
+gitdb2==2.0.6
+GitPython==3.0.4
 gunicorn==19.9.0
-humanfriendly==4.16.1
-idna==2.7
-imagesize==1.0.0
-ipdb==0.11
-ipykernel==4.8.2
-ipython==7.0.1
+humanfriendly==4.18
+idna==2.8
+imagesize==1.1.0
+importlib-metadata==0.23
+ipdb==0.12.2
+ipython==7.9.0
 ipython-genutils==0.2.0
-itsdangerous==0.24
-jedi==0.13.1
-Jinja2==2.10.1
-jupyter-client==5.2.3
-jupyter-core==4.4.0
-kiwisolver==1.0.1
+itsdangerous==1.1.0
+jedi==0.15.1
+Jinja2==2.10.3
 lockfile==0.12.2
-MarkupSafe==1.0
-matplotlib==2.2.2
-mkl-fft==1.0.0
-mkl-random==1.0.1
-more-itertools==4.3.0
-multiexit=1.4.1
-numpy==1.15.2
-packaging==17.1
-pandas==0.23.4
-parso==0.3.1
-pexpect==4.6.0
+Mako==1.1.0
+MarkupSafe==1.1.1
+more-itertools==7.2.0
+numpy==1.17.3
+packaging==19.2
+pandas==0.25.2
+parso==0.5.1
+pexpect==4.7.0
 pickleshare==0.7.5
-pipreqs==0.4.9
-pluggy==0.7.1
-prompt-toolkit==2.0.6
-protobuf==3.6.1
+pluggy==0.13.0
+prompt-toolkit==2.0.10
+protobuf==3.10.0
+psycopg2-binary==2.8.4
 ptyprocess==0.6.0
-py==1.7.0
-pycparser==2.19
-pyevent==0.0.1
-PyGithub==1.43.2
-Pygments==2.2.0
-PyJWT==1.6.4
-PyMySQL==0.9.2
-pyOpenSSL==17.5.0
-pyparsing==2.2.0
-pyperclip==1.7.0
-PySocks==1.6.8
-pytest==3.8.2
-python-daemon==2.1.2
-python-dateutil==2.7.3
-pytz==2018.5
-pyzmq==17.0.0
-requests>=2.21.0
+py==1.8.0
+PyGithub==1.44
+Pygments==2.4.2
+PyJWT==1.7.1
+PyMySQL==0.9.3
+pyparsing==2.4.2
+pytest==5.2.2
+python-dateutil==2.8.0
+python-editor==1.0.4
+pytz==2019.3
+requests==2.22.0
 requests-file==1.4.3
-scipy==1.3.1
 setuptools-git==1.2
-simplegeneric==0.8.1
-six==1.11.0
-smmap2==2.0.4
-snowballstemmer==1.2.1
-Sphinx==1.7.4
-sphinx_rtd_theme==0.4.2
-sphinxcontrib-websupport==1.0.1
-SQLAlchemy>=1.3.0
-tldextract==2.2.0
-tornado==5.0.2
-traitlets==4.3.2
-urllib3>=1.24.2
+six==1.12.0
+smmap2==2.0.5
+snowballstemmer==2.0.0
+soupsieve==1.9.4
+Sphinx==2.2.1
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+SQLAlchemy==1.3.10
+tldextract==2.2.2
+traitlets==4.3.3
+urllib3==1.25.6
 wcwidth==0.1.7
-Werkzeug==0.15.3
-wrapt==1.10.11
+Werkzeug==0.16.0
+wrapt==1.11.2
 WTForms==2.2.1
-yarg==0.1.9
-zmq==15.1.0
-zope.interface==4.5.0
+XlsxWriter==1.2.2
+zipp==0.6.0
