--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
 
   augur:
-    image: augur-new:latest
+    image: augurlabs/augur-new:latest
     build:
       context: .
       dockerfile: ./docker/backend/Dockerfile
