--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,13 @@
     "@types/jquery": "^3.5.1",
     "@types/lodash": "^4.14.159",
     "@types/nprogress": "^0.2.0",
-    "@vue/cli": "^3.12.1",
+    "@vue/cli": "^5.0.8",
     "bootstrap": "^4.5.2",
-    "brunch": "^2.10.17",
+    "brunch": "^4.0.1",
     "cairo": "0.1.0-alpha.3",
     "canvas": "^2.9.1",
     "core-js": "^2.6.11",
-    "d3": "^5.16.0",
+    "d3": "^7.6.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "math": "0.0.3",
@@ -30,9 +30,9 @@
     "shards-ui": "^3.0.0",
     "shards-vue": "^1.0.4",
     "svgsaver": "^0.9.0",
-    "vega": "5.20.2",
+    "vega": "^5.22.1",
     "vega-embed": "^4.2.5",
-    "vega-lite": "^3.4.0",
+    "vega-lite": "^5.6.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.5",
     "vue-multiselect": "^2.1.6",
@@ -48,8 +48,8 @@
     "@types/mocha": "^5.2.4",
     "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-typescript": "^3.12.1",
-    "@vue/cli-plugin-unit-mocha": "^3.12.1",
-    "@vue/cli-service": "^3.12.1",
+    "@vue/cli-plugin-unit-mocha": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "@vue/test-utils": "1.0.0-beta.29",
     "chai": "^4.1.2",
     "sass": "^1.26.10",
