--- a/docs/source/rest-api/spec.yml
+++ b/docs/source/rest-api/spec.yml
@@ -5169,3 +5169,112 @@ paths:
             type: array
       tags:
       - complexity
+  /complexity/project_file_complexity: 
+    get: 
+      description: 'Returns project line data for all repositories in an Augur instance, using information from a git platform (GitHub, GitLab, etc.). Each record includes the file complexity of the project repository.' 
+      operationId: File Complexity (repo)
+      responses:
+        '200':
+          description: OK
+          schema:
+            items:
+              properties:
+                repo_id:
+                  description: 'Example: 25540'
+                  type: integer
+                repo_git:
+                  description: 'Example: https://github.com/chaoss/augur'
+                  type: string
+                repo_name:
+                  description: 'Example: augur'
+                  type: string
+                sum_code_complexity:
+                  description: 'Example: 0'
+                  type: integer
+                average_code_complexity:
+                  description: 'Example: 0'
+                  type: integer
+            type: array
+      tags:
+      - complexity
+  /complexity/project_blank_lines: 
+    get: 
+      description: 'Returns project line data for all repositories in an Augur instance, using information from a git platform (GitHub, GitLab, etc.). Each record includes the total number of blank lines in the project repository.' 
+      operationId: Total Blank Lines (repo)
+      responses:
+        '200':
+          description: OK
+          schema:
+            items:
+              properties:
+                repo_id:
+                  description: 'Example: 25540'
+                  type: integer
+                repo_git:
+                  description: 'Example: https://github.com/chaoss/augur'
+                  type: string
+                repo_name:
+                  description: 'Example: augur'
+                  type: string
+                blank_lines:
+                  description: 'Example: 274734'
+                  type: integer
+		            avg_blank_lines:
+		              description: 'Example: 923'
+                  type: integer
+            type: array
+      tags:
+      - complexity
+  /complexity/project_comment_lines: 
+    get: 
+      description: 'Returns project line data for all repositories in an Augur instance, using information from a git platform (GitHub, GitLab, etc.). Each record includes the total number of comment lines in the project repository.' 
+      operationId: Total Comment Lines (repo)
+      responses:
+        '200':
+          description: OK
+          schema:
+            items:
+              properties:
+                repo_id:
+                  description: 'Example: 25540'
+                  type: integer
+                repo_git:
+                  description: 'Example: https://github.com/chaoss/augur'
+                  type: string
+                repo_name:
+                  description: 'Example: augur'
+                  type: string
+                comment_lines:
+                  description: 'Example: 5066'
+                  type: integer
+		            avg_comment_lines:
+		              description: 'Example: 345'
+                  type: integer
+            type: array
+      tags:
+      - complexity
+ /complexity/project_files: 
+    get: 
+      description: 'Returns project line data for all repositories in an Augur instance, using information from a git platform (GitHub, GitLab, etc.). Each record includes the total number of files in the project repository.' 
+      operationId: Total Files (repo)
+      responses:
+        '200':
+          description: OK
+          schema:
+            items:
+              properties:
+                repo_id:
+                  description: 'Example: 25540'
+                  type: integer
+                repo_git:
+                  description: 'Example: https://github.com/chaoss/augur'
+                  type: string
+                repo_name:
+                  description: 'Example: augur'
+                  type: string
+                files:
+                  description: 'Example: 207'
+                  type: integer
+            type: array
+      tags:
+      - complexity
