I think this gets groups sorting by number of repo

--- a/frontend/frontend.config.json
+++ b/frontend/frontend.config.json
@@ -1,6 +1,6 @@
 {
     "Frontend": {
-        "host": "ebay.chaoss.io",
+        "host": "augur.chaoss.io",
         "port": 5000,
         "ssl": false
     }
