build: harden build_docker.yml permissions
Signed-off-by: Alex <aleksandrosansan@gmail.com>

--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -10,8 +10,14 @@ on:
     types:
       - published
 
+permissions: {}
+
 jobs:
   build:
+    permissions:
+      contents: read #  to fetch code (actions/checkout)
+      packages: write #  to push docker image
+
     name: Build image
     runs-on: ubuntu-latest
     steps:
