Install deps required for workers
Signed-off-by: Michael Scherer <misc@redhat.com>

--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -34,6 +34,8 @@ RUN python3 -m venv /opt/venv
 RUN set -x \
     && /opt/venv/bin/pip install .
 
+RUN ./scripts/docker/install-workers-deps.sh
+
 RUN ./scripts/docker/install-go.sh
 # RUN ./scripts/install/workers.sh 
 
