Add basic augur image validation to build
Signed-off-by: Gábor Lipták <gliptak@gmail.com>

--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -38,6 +38,9 @@ jobs:
               DOCKERFILE=${i}/Dockerfile
 
               docker build . -f $DOCKERFILE --tag $REGISTRY/$IMAGE:latest
+              if [[ $i == 'docker/backend' ]]; then
+                docker run --rm --entrypoint /opt/venv/bin/augur $REGISTRY/$IMAGE:latest --help
+              fi
               if [[ $GITHUB_EVENT_NAME == 'release' ]]; then
                 TAG=$(basename $GITHUB_REF)
                 docker tag $REGISTRY/$IMAGE:latest $REGISTRY/$IMAGE:$TAG
