sendgrid key removed
Signed-off-by: Sean P. Goggins <gogginss@missouri.edu>

--- a/sendgrid.env
+++ b/sendgrid.env
@@ -1,1 +1,1 @@
-export SENDGRID_API_KEY='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'
+export SENDGRID_API_KEY='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'
