It would maybe help if I spelled "schema" right
Signed-off-by: Seltyk <whhacker.dcx@gmail.com>

--- a/docs/source/rest-api/spec.yml
+++ b/docs/source/rest-api/spec.yml
@@ -103,7 +103,7 @@ paths:
       responses:
         '200':
           description: OK
-          scema:
+          schema:
             items:
               properties:
                 base64_url:
