Pretend the schema is an array for rendering
I'm honestly not sure why "object" doesn't work
out, so for the first time in my life, I had to
write docs for the docs in the docs!

Signed-off-by: Seltyk <whhacker.dcx@gmail.com>

--- a/docs/source/rest-api/spec.yml
+++ b/docs/source/rest-api/spec.yml
@@ -98,7 +98,7 @@ paths:
       - utility
   /repos/:id:
     get:
-      description: Get a downloaded repo by its ID in Augur.
+      description: Get a downloaded repo by its ID in Augur. The schema block below says it is an array, but it is not.
       operationId: Get Repo By ID
       responses:
         '200':
@@ -136,7 +136,7 @@ paths:
                 url:
                   description: 'URL of this repository, sans leading protocol. Example: github.com/3scale/3scale-operator-metadata'
                   type: string
-            type: object
+            type: array
       tags:
       - utility
   /owner/:owner/repo/:repo:
