--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,15 +16,26 @@ services:
     ports:
      - 6379:6379
 
+  rabbitmq:
+    image: rabbitmq:3
+    restart: unless-stopped
+    networks:
+      - private
+    volumes:
+      - ./rabbitmq-default.conf:/etc/rabbitmq/rabbitmq.config:ro
 
   augur:
     image: augur-new:latest
     build:
       context: .
       dockerfile: ./docker/backend/Dockerfile
+      args:
+        target: ${AUGUR_STARTUP_TARGET:-default}
     volumes:
       - facade:/augur/facade
     restart: unless-stopped
+    networks:
+      - private
     ports:
       - 5002:5000
     extra_hosts:
@@ -37,12 +48,16 @@ services:
       - "AUGUR_GITHUB_USERNAME=${AUGUR_GITHUB_USERNAME}"
       - "AUGUR_GITLAB_USERNAME=${AUGUR_GITLAB_USERNAME}"
       - REDIS_CONN_STRING=redis://redis:6379
+      - RABBITMQ_CONN_STRING=amqp://augur:password123@rabbitmq:5672/augur_vhost
     depends_on:
       - augur-db
       - redis
+      - rabbitmq
   
 volumes:
   facade:
     driver: local
 
-
+networks:
+  private:
+    name: internal
