Split ENTRYPOINT script in 2
ENTRYPOINT is made to be used when the container is running one specific
executable (think bash, or python) and is hard to override. However,
when using the container, it is sometime needed to execute specific
subcommand, such as augur db upgrade-db-version

Signed-off-by: Michael Scherer <misc@redhat.com>

--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -42,5 +42,7 @@ RUN ./scripts/docker/install-go.sh
 RUN mkdir -p repos/ logs/ /augur/facade/
 
 COPY ./docker/backend/entrypoint.sh /
-RUN chmod +x /entrypoint.sh
-ENTRYPOINT /entrypoint.sh
+COPY ./docker/backend/init.sh /
+RUN chmod +x /entrypoint.sh /init.sh
+ENTRYPOINT ["/entrypoint.sh"]
+CMD /init.sh
