--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,11 @@ env.txt
 docker_env.txt
 pyenv.txt
 augur_export_env.sh
-.DS_Store
+*DS_Store
 *.config.json
 !docker.config.json
 config.yml
 reports.yml
-
 
 node_modules/
 .idea/
