--- a/docs/source/rest-api/spec.yml
+++ b/docs/source/rest-api/spec.yml
@@ -3,10 +3,10 @@ basePath: /api/unstable/
 externalDocs:
   description: CHAOSS Metric Definitions
   url: https://chaoss.community/metrics/
-host: augur.chaoss.io
+host: ai.chaoss.io
 info:
   title: Augur REST API
-  version: 0.21.11
+  version: 0.60.0
 openapi: 3.1.0
 paths:
   #utility endpoints
