--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -19,7 +19,7 @@ formats: all
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   version: 3.8
+   version: 3.10
    install:
       - method: pip
         path: .
@@ -27,3 +27,8 @@ python:
             - dev
       - method: setuptools
         path: .
+
+   build: 
+     os: ubuntu-22.04
+     tools: 
+       python:3.10
