--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -32,8 +32,8 @@ COPY ./scripts/ scripts/
 RUN python3 -m venv /opt/venv
 
 RUN set -x \
-    && /opt/venv/bin/pip install --upgrade pip
-    && /opt/venv/bin/pip install wheel
+    && /opt/venv/bin/pip install --upgrade pip \
+    && /opt/venv/bin/pip install wheel \
     && /opt/venv/bin/pip install .
 
 RUN ./scripts/docker/install-workers-deps.sh
